# minunit

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  asserts.c
include/: minunit.h
